--- a/posts/04.natural_language_processing.md
+++ b/posts/04.natural_language_processing.md
@@ -213,6 +213,19 @@ key_layer = transpose_for_scores(key_layer, batch_size, num_attention_heads,
 attention_scores = tf.matmul(query_layer, key_layer, transpose_b=True)
 attention_scores = tf.multiply(attention_scores,
     1.0 / math.sqrt(float(size_per_head)))
+
+if attention_mask is not None:
+    # `attention_mask` = [B, 1, F, T]
+    attention_mask = tf.expand_dims(attention_mask, axis=[1])
+
+    # Since attention_mask is 1.0 for positions we want to attend and 0.0 for
+    # masked positions, this operation will create a tensor which is 0.0 for
+    # positions we want to attend and -10000.0 for masked positions.
+    adder = (1.0 - tf.cast(attention_mask, tf.float32)) * -10000.0
+
+    # Since we are adding it to the raw scores before the softmax, this is
+    # effectively the same as removing these entirely.
+    attention_scores += adder
 attention_probs = tf.nn.softmax(attention_scores)
 attention_probs = dropout(attention_probs, attention_probs_dropout_prob)
 ```
@@ -285,6 +298,15 @@ with tf.variable_scope("self"):
 
 ```
 
+关于 mask，可以看看这个[https://juejin.im/post/5b9f1af0e51d450e425eb32d](https://juejin.im/post/5b9f1af0e51d450e425eb32d)
+
+摘抄一下：
+
+什么是padding mask呢？回想一下，我们的每个批次输入序列长度是不一样的！也就是说，我们要对输入序列进行对齐！具体来说，就是给在较短的序列后面填充0。因为这些填充的位置，其实是没什么意义的，所以我们的attention机制不应该把注意力放在这些位置上，所以我们需要进行一些处理。
+具体的做法是，把这些位置的值加上一个非常大的负数(可以是负无穷)，这样的话，经过softmax，这些位置的概率就会接近0！
+
+而sequence mask是为了使得decoder不能看见未来的信息。也就是对于一个序列，在time_step为t的时刻，我们的解码输出应该只能依赖于t时刻之前的输出，而不能依赖t之后的输出。因此我们需要想一个办法，把t之后的信息给隐藏起来。
+那么具体怎么做呢？也很简单：产生一个上三角矩阵，上三角的值全为1，下三角的值权威0，对角线也是0。把这个矩阵作用在每一个序列上，就可以达到我们的目的啦。
 
 
 #### gpt-2
