--- a/posts/09.recommender_systems.md
+++ b/posts/09.recommender_systems.md
@@ -25,6 +25,8 @@
 
 [深度推荐系统2019年度阅读收藏清单](https://mp.weixin.qq.com/s/u6r5FiPbfVF31Q38OIn6xA)
 
+[推荐工业界实战角度详解TensorFlow中Wide & Deep源码（三）](https://mp.weixin.qq.com/s/ur7xwdY86KlWU3qpmqUcog)
+
 ### 推荐中的采样
 
 [浅谈个性化推荐系统中的非采样学习](https://mp.weixin.qq.com/s/OGLJx-1tGYYuLWFricfRKg)
@@ -80,7 +82,6 @@
 
 + 原domain `\(S\)`：有大量用户交互行为的图文或视频推荐。一条样本包括`\(\left(u, \mathbf{x}^{u}\right) \in \mathcal{S}\)`，其中，`\(\mathbf{x}^{u}=\left\{x_{1}^{u}, \ldots, x_{n}^{u}\right\}\left(x_{i}^{u} \in X\right)\)`表示用户的点击历史
 + 目标domain `\(T\)`：可以是用户label很少的一些预测任务。例如用户可能喜欢的item、用户性别、用户年龄分桶等。一条样本包括`\((u, y) \in \mathcal{T}\)`，其中`\(y \in \mathcal{Y}\)`是一个有监督的标签。
-
 
 
 
