--- a/posts/11.ctr_prediction.md
+++ b/posts/11.ctr_prediction.md
@@ -31,3 +31,9 @@ HugeCTR 是首个全部解决以上问题的开源 GPU 训练框架，与现有 
 ### 阿里妈妈CTR
 
 [阿里妈妈点击率预估中的长期兴趣建模](https://mp.weixin.qq.com/s/RQ1iBs8ftvNR0_xB7X8Erg)
+
+### 凤巢
+
+大规模深度学习广告系统的分布式分层GPU参数服务器
+
+[Distributed Hierarchical GPU Parameter Server for Massive Scale Deep Learning Ads Systems](https://arxiv.org/pdf/2003.05622.pdf)
