--- a/posts/12.graph_neural_networks.md
+++ b/posts/12.graph_neural_networks.md
@@ -104,3 +104,8 @@
 ### 社区发现相关
 
 [最小熵原理：“层层递进”之社区发现与聚类](https://mp.weixin.qq.com/s/0ssSBQC8oFP0JutlKZ3yCA)
+
+
+### transformer+gnn
+
+[原来Transformer就是一种图神经网络，这个概念你清楚吗？](https://mp.weixin.qq.com/s/DABEcNf1hHahlZFMttiT2g)
