--- a/posts/17.hardwares.md
+++ b/posts/17.hardwares.md
@@ -14,6 +14,8 @@
 
 [The Deep Learning Revolution and Its Implications for Computer Architecture and Chip Design](https://arxiv.org/abs/1911.05289)
 
+[Kaggle竞赛硬件如何选择？不差钱、追求速度，那就上TPU吧](https://mp.weixin.qq.com/s/HK-lq-6_LxzVkBo9k7kjMg)
+
 ### pixel 4
 
 [数十亿次数学运算只消耗几毫瓦电力，谷歌开源Pixel 4背后的视觉模型](https://mp.weixin.qq.com/s/uySIMxsZRmDLq-5zAZO9bQ)
