--- a/posts/18.architectures.md
+++ b/posts/18.architectures.md
@@ -101,6 +101,8 @@ DALI 和 TensorFlow 自带的 DataLoader 类似，是一个专门用于加速数
 
 [强化学习、联邦学习、图神经网络，飞桨全新工具组件详解](https://mp.weixin.qq.com/s/TFXXOZPU-40NdOmk4lb-iw)
 
+[YOLOv3比原作高10个点，飞桨更新至73个视觉算法、203个预训练模型](https://mp.weixin.qq.com/s/WjJFTMvVtToeAn3QXsoewQ)
+
 ### TensorRT
 
 [手把手教你采用基于TensorRT的BERT模型实现实时自然语言理解](https://mp.weixin.qq.com/s/rvoelBO-XjbswxQigH-6TQ)
@@ -173,3 +175,9 @@ tf版本：
 ### auto-ml架构
 
 [比谷歌AutoML快110倍，全流程自动机器学习平台应该是这样的](https://mp.weixin.qq.com/s/2dBJZLgVICXRmR7JcmnciA)
+
+
+### megengine
+
+[国产深度学习框架MegEngine，旷视打造，三月底即将开源](https://mp.weixin.qq.com/s/Eq8L-NuESY1uIqUO2Qxcew)
+
