--- a/posts/13.reinforcement_learning.md
+++ b/posts/13.reinforcement_learning.md
@@ -97,16 +97,59 @@ UDRL学会将这些输入观察结果解释为命令，并根据过去(可能是
 
 ### 游戏+RL
 
-#### 游戏AI历史
+#### 游戏AI历史(alphago系列)
+
+[https://deepmind.com/research/case-studies/alphago-the-story-so-far](https://deepmind.com/research/case-studies/alphago-the-story-so-far)
 
 [从α到μ：DeepMind棋盘游戏AI进化史](https://mp.weixin.qq.com/s/IcaxjdDLjihCK-nKBlJVWg)
 
 alphago：[Mastering the game of Go with deep neural networks and tree search](https://storage.googleapis.com/deepmind-media/alphago/AlphaGoNaturePaper.pdf)
 
+alphago zero：[Mastering the game of Go without Human Knowledge](https://www.nature.com/articles/nature24270.epdf?author_access_token=VJXbVjaSHxFoctQQ4p2k4tRgN0jAjWel9jnR3ZoTv0PVW4gB86EEpGqTRDtpIz-2rmo8-KG06gqVobU5NSCFeHILHcVFUeMsbvwS-lxjqQGg98faovwjxeTUgZAUMnRQ)
+
 alpha zero: [Mastering Chess and Shogi by Self-Play with a General Reinforcement Learning Algorithm](https://arxiv.org/pdf/1712.01815.pdf)
 
-mu zero: [Mastering Atari, Go, Chess and Shogi by Planning with a Learned Model](https://arxiv.org/pdf/1911.08265.pdf)
+mu zero: [Mastering Atari, Go, Chess and Shogi by Planning with a Learned Model](https://science.sciencemag.org/content/sci/362/6419/1140.full.pdf)
 
+##### alphago
+
+reward：1胜，-1负，中间状态0
+
+3个网络：
+
++ SL：学习棋谱的P
++ RL：自己和自己下，学习一个P
++ V：学习s的长期收益
++ fast roolout：用一个简单的线性模型学习棋谱的P
+
+
+[蒙特卡罗树搜索+深度学习 -- AlphaGo原版论文阅读笔记](https://blog.csdn.net/dinosoft/article/details/50893291)
+
+mcts：
+
+选Q+u最大的a，
+
+首先模拟n次，
+
++ N(s,a)：对于第i次，如果经过当前的(s,a)，那么+1
++ Q(s,a)：对于第i次，如果走到叶子时经过了当前的(s,a)，那么把V(叶子)加上，最后除以N(s,a)
++ V(叶子)：(1-lambda) * value network的输出+lambda * fastrollout走到结束时的reward
++ u(s,a)：与P(s,a)/(1+N(s,a))成正比
++ P(s,a)：policy network的输出
+
+最开始还没expand时，Q是0，那SL的P就是prior probabilities。P还能起到减少搜索宽度的作用，普通点得分很低。比较难被select到。有趣的结论是，比较得出这里用SL比RL的要好！！模仿人类走棋的SL结果更适合MCTS搜索，因为人类选择的是 a diverse beam of promising moves。而RL的学的是最优的下法（whereas RL optimizes for the single best move）。所以人类在这一点暂时获胜！不过另一方面，RL学出来的value networks在评估方面效果好。所以各有所长。**搜索次数N一多会扣分， 鼓励exploration其他分支。**
+
+##### alphago zero
+
+模型输出p和v，训练的时候通过mcts去选action。loss就是p的交叉熵+v的rmse
+
+##### alpha zero
+
+主要是特征改了一下，使得可以适用于各种棋,loss没变
+
+##### muzero
+
+模型加了个r，loss里加了个r，planning比较复杂，需要考虑r V P，还有次数N
 
 #### 绝悟
 
