--- a/posts/13.reinforcement_learning.md
+++ b/posts/13.reinforcement_learning.md
@@ -149,7 +149,9 @@ mcts：
 
 ##### muzero
 
-模型加了个r，loss里加了个r，planning比较复杂，需要考虑r V P，还有次数N
+模型加了个r，loss里加了个r，
+
+planning需要考虑r V P，还有次数N
 
 #### 绝悟
 
