--- a/posts/05.speech_algorithms.md
+++ b/posts/05.speech_algorithms.md
@@ -63,3 +63,22 @@
 [投喂4万种噪声，20种语言方言实时转录，搜狗「开挂」录音笔这样炼成](https://mp.weixin.qq.com/s/p4uckiXAkVQVaJhfpISjOQ)
 
 [非常时期，搜狗新一代“AI笔皇”问世！支持同声传译，转写准确率98%](https://mp.weixin.qq.com/s/KWnu_aHwHlhwDxJ2Cj-cZg)
+
+
+### 音乐推荐相关
+
+[https://paperswithcode.com/search?q_meta=&q=music+recommend](https://paperswithcode.com/search?q_meta=&q=music+recommend)
+
+spotify的paper：
+
+[https://research.atspotify.com/?s=playlist&type=publications](https://research.atspotify.com/?s=playlist&type=publications)
+
+歌单生成：
+
+[A Comparison of Methods for Treatment Assignment with an Application to Playlist Generation](https://arxiv.org/pdf/2004.11532v3.pdf)
+
+
+探索利用：
+
+[Explore, Exploit, and Explain: Personalizing Explainable Recommendations with Bandits](https://static1.squarespace.com/static/5ae0d0b48ab7227d232c2bea/t/5ba849e3c83025fa56814f45/1537755637453/BartRecSys.pdf)
+
