--- a/posts/13.reinforcement_learning.md
+++ b/posts/13.reinforcement_learning.md
@@ -10,6 +10,10 @@
 
 [强化学习之路——清华博士后解读83篇文献，万字长文总结](https://mp.weixin.qq.com/s/eQslEpJIT1negsbzmcORcA)
 
+pg/ddpg相关
+
+[https://daiwk.github.io/posts/rl-stepbystep-chap9.html](https://daiwk.github.io/posts/rl-stepbystep-chap9.html)
+
 
 ### MAB相关
 
