--- a/posts/11.ctr_prediction.md
+++ b/posts/11.ctr_prediction.md
@@ -8,7 +8,7 @@
 
 [https://daiwk.github.io/posts/dl-dl-ctr-models.html](https://daiwk.github.io/posts/dl-dl-ctr-models.html)
 
-## ctr特征
+### ctr特征
 
 [稠密特征加入CTR预估模型的方法汇总](https://mp.weixin.qq.com/s/xhxBbSYva4g9wUvQ5RIdVA)
 
