--- a/posts/09.recommender_systems.md
+++ b/posts/09.recommender_systems.md
@@ -147,3 +147,14 @@
 [NeurIPS 2019 \| 从感知跃升到认知，这是阿里在认知智能推荐领域的探索与应用](https://mp.weixin.qq.com/s/MzF-UT5Hm071bTUTZpKDGw)
 
 [Learning Disentangled Representations for Recommendation](https://arxiv.org/pdf/1910.14238.pdf)
+
+
+### 自监督
+
+[Self-supervised Learning for Large-scale Item Recommendations](https://arxiv.org/pdf/2007.12865.pdf)
+
+v3有两个图：[https://arxiv.org/pdf/2007.12865v3.pdf](https://arxiv.org/pdf/2007.12865v3.pdf)
+
+<html><img src="../assets/ssl-1.png" width="400" /><br/></html>
+
+<html><img src="../assets/ssl-2.png" width="400" /><br/></html>
