--- a/posts/09.recommender_systems.md
+++ b/posts/09.recommender_systems.md
@@ -112,6 +112,12 @@
 
 [下一代深度召回与索引联合优化算法JTM](https://mp.weixin.qq.com/s/heiy74_QriwxpZRyTUEgPg)
 
+#### DR
+
+[字节最新复杂召回模型，提出深度检索DR框架解决超大规模推荐系统中的匹配问题](https://cloud.tencent.com/developer/article/1698045)
+
+[Deep Retrieval: An End-to-End Learnable Structure Model for Large-Scale Recommendations](https://arxiv.org/abs/2007.07203)
+
 ### transformer+推荐
 
 [Transformer在推荐模型中的应用总结](https://zhuanlan.zhihu.com/p/85825460)
@@ -158,3 +164,4 @@ v3有两个图：[https://arxiv.org/pdf/2007.12865v3.pdf](https://arxiv.org/pdf/
 <html><img src="../assets/ssl-1.png" width="400" /><br/></html>
 
 <html><img src="../assets/ssl-2.png" width="400" /><br/></html>
+
