--- a/posts/11.ctr_prediction.md
+++ b/posts/11.ctr_prediction.md
@@ -84,3 +84,9 @@ HugeCTR 是首个全部解决以上问题的开源 GPU 训练框架，与现有 
 大规模深度学习广告系统的分布式分层GPU参数服务器
 
 [Distributed Hierarchical GPU Parameter Server for Massive Scale Deep Learning Ads Systems](https://arxiv.org/pdf/2003.05622.pdf)
+
+### cvr
+
+ecpc：用户给定一个粗粒度出价，模型可以在一定的范围内调价
+ocpc：完全以模型出价为准
+
