--- a/posts/09.recommender_systems.md
+++ b/posts/09.recommender_systems.md
@@ -165,3 +165,9 @@ v3有两个图：[https://arxiv.org/pdf/2007.12865v3.pdf](https://arxiv.org/pdf/
 
 <html><img src="../assets/ssl-2.png" width="400" /><br/></html>
 
+
+### GNN+推荐
+
+[https://zhuanlan.zhihu.com/p/323302898](https://zhuanlan.zhihu.com/p/323302898)
+
+[Graph Neural Networks in Recommender Systems: A Survey](https://arxiv.org/pdf/2011.02260.pdf)
