--- a/posts/09.recommender_systems.md
+++ b/posts/09.recommender_systems.md
@@ -29,6 +29,10 @@
 
 ### 推荐中的采样
 
+batch内shuffle采样（有放回）
+
+[On Sampling Strategies for Neural Network-based Collaborative Filtering](https://arxiv.org/pdf/1706.07881.pdf)
+
 [浅谈个性化推荐系统中的非采样学习](https://mp.weixin.qq.com/s/OGLJx-1tGYYuLWFricfRKg)
 
 [Sampling-Bias-Corrected Neural Modeling for Large Corpus Item Recommendations](https://dl.acm.org/doi/10.1145/3298689.3346996)
