--- a/posts/01.traditional_ml.md
+++ b/posts/01.traditional_ml.md
@@ -44,6 +44,8 @@
 
 #### xgb
 
+[珍藏版 \| 20道XGBoost面试题](https://cloud.tencent.com/developer/article/1500914)
+
 参考[7 papers \| Quoc V. Le、何恺明等新论文；用进化算法设计炉石](https://mp.weixin.qq.com/s/lLeWCgZJfc-921jZd2rlTA)
 
 [A Comparative Analysis of XGBoost](https://arxiv.org/pdf/1911.01914v1.pdf)
