--- a/posts/02.deeplearning.md
+++ b/posts/02.deeplearning.md
@@ -49,6 +49,8 @@ Colin Wei等人的论文“Regularization Matters: Generalization and Optimizati
 
 [Optimization for deep learning: theory and algorithms](https://arxiv.org/pdf/1912.08957.pdf)
 
+[一个框架看懂优化算法之异同 SGD/AdaGrad/Adam](https://zhuanlan.zhihu.com/p/32230623)
+
 #### 复合函数最优化
 
 [Efﬁcient Smooth Non-Convex Stochastic Compositional Optimization via Stochastic Recursive Gradient Descent](https://papers.nips.cc/paper/8916-efficient-smooth-non-convex-stochastic-compositional-optimization-via-stochastic-recursive-gradient-descent)
