--- a/posts/04.natural_language_processing.md
+++ b/posts/04.natural_language_processing.md
@@ -10,6 +10,8 @@
 
 ### fasttext&word2vec
 
+注：w2v训练时的内积不是2个emb-in的内积，而是emb-in和emb-out的内积
+
 [fasttext源码解析](https://my.oschina.net/u/3800567/blog/2877570)
 
 + ```Dictionary::readWord```：空格分割，一次读出来一个word
@@ -18,6 +20,7 @@
 + ```Dictionary::initNgrams```：每个词，加上前缀BOW（<）和后缀（>），然后先扔进这个词的subwords里，然后再调用``` Dictionary::computeSubwords```把这个词的ngrams也扔进它的subwords里
 
 整个词表，是word数+bucket这么大，其中bucket表示可容纳的subwords和wordNgrams的数量，默认200w
+
 
 
 ### 分词
