--- a/posts/09.recommender_systems.md
+++ b/posts/09.recommender_systems.md
@@ -124,6 +124,11 @@ batch内shuffle采样（有放回）
 
 [Transformer在推荐模型中的应用总结](https://zhuanlan.zhihu.com/p/85825460)
 
+### 多目标
+
+cgc参考paddle代码：[cgc_demo.py](../assets/cgc_dir/cgc_demo.py")
+
+
 ### 工业界的一些推荐应用
 
 #### dlrm
