--- a/posts/09.recommender_systems.md
+++ b/posts/09.recommender_systems.md
@@ -126,7 +126,7 @@ batch内shuffle采样（有放回）
 
 ### 多目标
 
-cgc参考paddle代码：[cgc_demo.py](../assets/cgc_dir/cgc_demo.py")
+cgc参考paddle代码：[cgc_demo.py](../assets/cgc_dir/cgc_demo.py)
 
 
 ### 工业界的一些推荐应用
