--- a/posts/12.graph_neural_networks.md
+++ b/posts/12.graph_neural_networks.md
@@ -22,6 +22,8 @@
 
 [2020年，图机器学习将走向何方？](https://mp.weixin.qq.com/s/YC2gvjbSBs2qOgix6wVhuQ)
 
+常见问题：[QA派\｜GNN工业应用-PinSAGE](https://zhuanlan.zhihu.com/p/195735468)
+
 #### GNN理论研究
 
 [On The Equivalence Between Node Embeddings And Structural Graph Representations](https://arxiv.org/pdf/1910.00452.pdf)
