--- a/posts/09.recommender_systems.md
+++ b/posts/09.recommender_systems.md
@@ -177,3 +177,8 @@ v3有两个图：[https://arxiv.org/pdf/2007.12865v3.pdf](https://arxiv.org/pdf/
 [https://zhuanlan.zhihu.com/p/323302898](https://zhuanlan.zhihu.com/p/323302898)
 
 [Graph Neural Networks in Recommender Systems: A Survey](https://arxiv.org/pdf/2011.02260.pdf)
+
+### DCNv2
+
+[DCN V2：Google提出改进版DCN，用于大规模排序系统中的特征交叉学习(附代码)](https://zhuanlan.zhihu.com/p/353223660)
+
