--- a/posts/00.recap.md
+++ b/posts/00.recap.md
@@ -19,3 +19,12 @@ Yoshua Bengio 在[Deep Learning for System 2 Processing](http://www.iro.umontrea
 ### 2019nlp
 
 [2019 NLP大全：论文、博客、教程、工程进展全梳理（长文预警）](https://mp.weixin.qq.com/s/5T3-SxBTVzndULwKiFp4Hw)
+
+### 2021年盘点
+
+google research总结
+
+[https://ai.googleblog.com/2022/01/google-research-themes-from-2021-and.html](https://ai.googleblog.com/2022/01/google-research-themes-from-2021-and.html)
+
+[谷歌大神Jeff Dean领衔，万字展望5大AI趋势播报文章](https://baijiahao.baidu.com/s?id=1721742678416388422&wfr=spider&for=pc)
+
