--- a/posts/11.ctr_prediction.md
+++ b/posts/11.ctr_prediction.md
@@ -75,6 +75,8 @@ HugeCTR 是首个全部解决以上问题的开源 GPU 训练框架，与现有 
 
 [如何解决点击率预估？英伟达专家详解HugeCTR训练框架（二）](https://mp.weixin.qq.com/s/14ETFLjojsP7Aop4_THVKQ)
 
+[Merlin HugeCTR 分级参数服务器简介](https://mp.weixin.qq.com/s/bfnQ3glPYA0sAgZlntTDUw)
+
 ### 阿里妈妈CTR
 
 [阿里妈妈点击率预估中的长期兴趣建模](https://mp.weixin.qq.com/s/RQ1iBs8ftvNR0_xB7X8Erg)
