--- a/posts/18.architectures.md
+++ b/posts/18.architectures.md
@@ -181,3 +181,6 @@ tf版本：
 
 [国产深度学习框架MegEngine，旷视打造，三月底即将开源](https://mp.weixin.qq.com/s/Eq8L-NuESY1uIqUO2Qxcew)
 
+### 异构硬件加速
+
+[广告深度学习计算：异构硬件加速实践](https://mp.weixin.qq.com/s/DFkzvhLwLFlOg6QJwtSBbw)
