--- a/posts/11.ctr_prediction.md
+++ b/posts/11.ctr_prediction.md
@@ -93,3 +93,12 @@ HugeCTR 是首个全部解决以上问题的开源 GPU 训练框架，与现有 
 ecpc：用户给定一个粗粒度出价，模型可以在一定的范围内调价
 ocpc：完全以模型出价为准
 
+delay feedback
+[https://zhuanlan.zhihu.com/p/555950153](https://zhuanlan.zhihu.com/p/555950153)
+
+### 时长预估
+
+快手kdd 2022
+
+[Deconfounding Duration Bias in Watch-time Prediction for Video Recommendation](https://arxiv.org/pdf/2206.06003.pdf)
+
