--- a/posts/09.recommender_systems.md
+++ b/posts/09.recommender_systems.md
@@ -191,3 +191,26 @@ poso
 [Personalized Cold Start Modules for Large-scale Recommender Systems](https://arxiv.org/abs/2108.04690)
 
 [https://zhuanlan.zhihu.com/p/534056942](https://zhuanlan.zhihu.com/p/534056942)
+
+
+### 暴力召回ANN加速
+
+[https://kexue.fm/archives/9336](https://kexue.fm/archives/9336)
+
+大致思想，CUR分解：query和item的MxN打分矩阵，分解成F(Mxk1), G(k1xk2), H(k2xN)三个矩阵
+
++ Mxk1矩阵：原矩阵里搞k1列出来，即选出k1个种子item，得到F
++ k2xN矩阵：原矩阵里搞k2列出来，即选出k2个种子query，得到H
++ k1xk2矩阵：即矩阵1和矩阵2求交集，比如矩阵1是抽的第1,23,54列出来，矩阵2是抽的第4,80行出来，那交集元素就是(1,4),(1,80),(23,4),(23,80),(54,4),(54,80)这6个点，构成k1xk2矩阵，然后算一下伪逆得到G
+
+建索引：
++ 挑出种子query，和所有item两两计算相似度，得到H矩阵
++ 挑出种子item，和种子query两两计算相似度，再算伪逆，得到G矩阵
++ 计算G*H，存起来
+
+检索：
++ 输入的query和k1个种子item算一下相似度，得到1xk1的矩阵q
++ q和G*H相乘，就能得到q和每个item的相似度了
+  + 【这步可以ann化】：GH就是k1*N，按列来看，就是N个k1维向量，相当于N个item向量，扔到annlib里去就行了，而输入的q也是一个k1维向量，就可以ann了
+
+
