--- a/pdfs/template.tex
+++ b/pdfs/template.tex
@@ -1,4 +1,13 @@
+\documentclass{article}
+
 \usepackage{array,hhline}
 \def\markdownRendererTableBorder{1pt solid}
 \setlength\arrayrulewidth{0.4pt}
 \setlength\doublerulesep{0.4pt}
+
+\begin{document}
+
+% Your pandoc-generated LaTeX goes here
+
+\end{document}
+
