--- a/posts/2.recommend.md
+++ b/posts/2.recommend.md
@@ -1,3 +1,5 @@
+下载本文pdf：[https://github.com/daiwk/collections/blob/master/pdfs/recommend.pdf](https://github.com/daiwk/collections/blob/master/pdfs/recommend.pdf)
+
 # 推荐系统整体梳理
 
 [https://daiwk.github.io/posts/links-navigation-recommender-system.html](https://daiwk.github.io/posts/links-navigation-recommender-system.html)
