--- a/posts/2.recommend.md
+++ b/posts/2.recommend.md
@@ -58,7 +58,7 @@ $$
 
 + 先验（prior）：$$P(\theta)$$，没有观测到任数据时对$$\theta$$的预先判断，例如假设硬币很大概率是均匀的，很小概率不均匀；**随着数据量的增加，先验的影响力越来越小。**
 + 后验（posterior）：$$P(\theta \mid X)$$，最终的参数分布
-+ 似然（likelihood）：$$P(X \mid \theta)$$，假设$$\theat$$已知后，我们观察到的数据应该是什么样的
++ 似然（likelihood）：$$P(X \mid \theta)$$，假设$$\theta$$已知后，我们观察到的数据应该是什么样的
 
 结论：
 
