--- a/posts/2.recommend.md
+++ b/posts/2.recommend.md
@@ -442,6 +442,12 @@ batch内shuffle采样（有放回）
 
 [Sampling-Bias-Corrected Neural Modeling for Large Corpus Item Recommendations](https://dl.acm.org/doi/10.1145/3298689.3346996)
 
+### NCE/负采样/sampled-softmax等
+
+[求通俗易懂解释下nce loss？](https://www.zhihu.com/question/50043438/answer/2529305073)
+
+[http://demo.clab.cs.cmu.edu/cdyer/nce_notes.pdf](http://demo.clab.cs.cmu.edu/cdyer/nce_notes.pdf)
+
 [https://www.tensorflow.org/extras/candidate_sampling.pdf](https://www.tensorflow.org/extras/candidate_sampling.pdf)
 
 下载了一份：[https://github.com/daiwk/collections/blob/master/assets/candidate_sampling.pdf](https://github.com/daiwk/collections/blob/master/assets/candidate_sampling.pdf)
