--- a/posts/2.recommend.md
+++ b/posts/2.recommend.md
@@ -448,6 +448,8 @@ batch内shuffle采样（有放回）
 
 [http://demo.clab.cs.cmu.edu/cdyer/nce_notes.pdf](http://demo.clab.cs.cmu.edu/cdyer/nce_notes.pdf)
 
+[自然语言处理-word2vec-负采样/Negative Sampling](https://zhuanlan.zhihu.com/p/144146838)
+
 [https://www.tensorflow.org/extras/candidate_sampling.pdf](https://www.tensorflow.org/extras/candidate_sampling.pdf)
 
 下载了一份：[https://github.com/daiwk/collections/blob/master/assets/candidate_sampling.pdf](https://github.com/daiwk/collections/blob/master/assets/candidate_sampling.pdf)
