--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -2923,7 +2923,13 @@ DALL-E3：
 
 [PaLM-E: An Embodied Multimodal Language Model](https://arxiv.org/abs/2303.03378)
 
-## Pika/Runway等
+## InstantID
+
+[InstantID: Zero-shot Identity-Preserving Generation in Seconds](https://arxiv.org/pdf/2401.07519.pdf)
+
+[https://github.com/InstantID/InstantID](https://github.com/InstantID/InstantID)
+
+![InstantID](../assets/InstantID.png)
 
 ## sora
 
