--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -2929,6 +2929,10 @@ DALL-E3：
 
 [https://github.com/InstantID/InstantID](https://github.com/InstantID/InstantID)
 
+[小红书开源「InstantID」效果炸裂，迅速蹿上Github热榜](https://baijiahao.baidu.com/s?id=1789680663845556585&wfr=spider&for=pc)
+
+用户只需上传一张照片，就能轻松定制出多种风格的 AI 写真
+
 ![InstantID](../assets/InstantID.png)
 
 ## sora
