--- a/posts/0.contents.md
+++ b/posts/0.contents.md
@@ -1,4 +1,4 @@
-本网站目录
+本网站目录：
 
 + [llm_aigc](https://www.daiwk.net/1.llm_aigc)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_aigc.pdf)
 + [recommend](https://www.daiwk.net/2.recommend)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/recommend.pdf)
