--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -3113,6 +3113,13 @@ SIGIR2023 \| ID vs 模态: 推荐系统ID范式有望被颠覆？
 
 [对应的ppt](https://github.com/westlake-repl/MicroLens/blob/master/MicroLens_DeepMind_Talk.pdf)
 
+# 新的架构
+
+## Mamba
+
+## Hawk & Griffin
+
+[RNN效率媲美Transformer，谷歌新架构两连发：同等规模强于Mamba](https://mp.weixin.qq.com/s/RtAZiEzjRWgqQw3yu3lvcg)
 
 # 其他
 
