--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -2918,6 +2918,10 @@ VL-BERT 的预训练主要采用三个任务：
             self.data = self.abspaths
 ```
 
+## stable diffusion 3
+
+[Stable Diffusion 3论文终于发布，架构细节大揭秘，对复现Sora有帮助？](https://mp.weixin.qq.com/s/mH6IzExPPBpX8YTwxlP6dA)
+
 ## DALL-E系列
 
 DALL-E3：
@@ -2929,6 +2933,7 @@ DALL-E3：
 + 学习一个图像文本生成器，可以生成详细、准确的图像描述
 + 将此文本生成器应用到数据集以生成更详细的文本
 + 在改进的数据集上训练文本 - 图像模型
+
 
 
 ## PALM-E
@@ -2958,6 +2963,8 @@ DALL-E3：
 [一锤降维！解密OpenAI超级视频模型Sora技术报告，虚拟世界涌现了](https://mp.weixin.qq.com/s/ODsebK3fEc-adRDwRVDhQA)
 
 [Sora爆火48小时：杨立昆揭秘论文，参数量或仅30亿](https://new.qq.com/rain/a/20240217A05YVR00)
+
+[微软37页论文逆向工程Sora，得到了哪些结论？](https://mp.weixin.qq.com/s/5-pySWU40omjBowsV2WCKA)
 
 整体感觉：
 
@@ -3086,6 +3093,10 @@ sora是一个扩散模型，输入加了噪声的patches，还可以加上一些
 + 不能准确地模拟许多基本相互作用的物理过程，例如玻璃破碎。
 + 其他交互（例如吃食物）并不总是会产生对象状态的正确变化，例如长时间样本中出现的不连贯性或对象的自发出现。
 
+
+# 世界模型
+
+[怒斥Sora之后，LeCun放出「视觉世界模型」论文，揭示AI学习物理世界的关键​](https://mp.weixin.qq.com/s/KY-bTD-bxdB3Q-q97Gv7fg)
 
 # LLM与推荐结合
 
