--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -2631,9 +2631,12 @@ Old Logprobs是一次性一个batch的数据计算的，这是因为在一个bat
 + 在文本比较长的时候，还能保证通顺，**ppl要足够低**
 + 能attention到前面提过的细节，**不能自我矛盾**
 
-注意：如果训练时是2k长度的语料，而推理设定8k窗口，那么PPL会急剧上升，因为RoPE不能很好地处理没有训练过的位置编码。
+注意：如果训练时是2k长度的语料，而推理设定8k窗口，那么PPL会急剧上升，因为
 
-### 直接训练
++ RoPE不能很好地处理没有训练过的**位置编码**
++ 推理时**注意力机制**所处理的token数量远超训练时的数量，导致注意力机制的崩坏
+
+### 两阶段训练方式
 
 + 直接输入连续长文本（如书籍）
 + 多个中等文本拼接，再通过attention mask来限制各段文本之间注意力，让它们可以在各自的位置上各训各的，互不干扰。甚至实际上即使不做attention mask，效果也挺好。
@@ -2643,8 +2646,7 @@ Old Logprobs是一次性一个batch的数据计算的，这是因为在一个bat
 + 第一阶段：用2k或者4k训练一个基础模型，让模型学好**文本内容**和**短位置关系**
 + 第二阶段：用**比第一阶段小的数据量优化**模型在**长上下文的效果**，具体做法见下节
 
-
-### 插值类方法
+### 针对位置编码的插值类方法
 
 #### 线性插值
 
@@ -2664,7 +2666,7 @@ Old Logprobs是一次性一个batch的数据计算的，这是因为在一个bat
 
 &nbsp;
 
-### 其他方法
+### 针对attention score的缩放方法
 
 #### YaRN
 
